NetworkPolicy/native/details-native-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookinfo-detail-policy
  namespace: dev1
spec:
  podSelector:
    matchLabels:
      app: details
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: productpage
    ports:
    - protocol: TCP
      port: 9080
