NetworkPolicy/native/ratings-native-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookinfo-ratings-policy
  namespace: dev1
spec:
  podSelector:
    matchLabels:
      app: ratings
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: version
                operator: In
                values:
                  - v2
                  - v3
          namespaceSelector:
            matchLabels:
              name: dev1
      ports:
        - protocol: TCP
          port: 9080
