NetworkPolicy/native/revision-2-native.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookinfo-revision-2-policy
  namespace: dev1
spec:
  podSelector:
    matchLabels:
      version: v2
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: productpage 
      namespaceSelector:
            matchLabels:
              name: dev1
    ports:
    - protocol: TCP
      port: 9080 
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: ratings
    ports:
    - protocol: TCP
      port: 9080
