NetworkPolicy/native/revision-3-native.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookinfo-revision-3-policy
  namespace: dev1
spec:
  podSelector:
    matchLabels:
      version: v3
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: productpage
      ports:
        - protocol: TCP
          port: 9080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ratings
      ports:
        - protocol: TCP
          port: 9080
